css/main.scss
---
# this ensures Jekyll reads the file to be transformed into CSS later
# only Main files contain this front matter, not partials.
---

@import "variables";

body {
    margin: 60px auto;
    width: 70%;
}
@media (max-width: 1200px) {
    body {
        width: auto;
        padding-left: 10px;
        padding-right: 10px;
        margin: 20px auto;
    }
    h1 {
       font-size: 1.8em !important;   
    }
    p, h3, li, pre, ul.posts, textarea {
       font-size: 1.2em !important;
    }
}
li {
    font-size: $font-size;   
}
nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
}
a {
    text-decoration: none;
    color: $link-color;
}
a:hover {
    text-decoration: underline;
}
h1 {
    font-size: 3em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
h3 {
    font-size: $font-size;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
p {
    font-size: $font-size;
    color: $text-color;
}
footer {
    border-top: 1px solid #d5d5d5;
    font-size: .8em;
}

ul.posts { 
    margin: 20px auto 40px; 
    font-size: $font-size;
}

ul.posts li {
    list-style: none;
}
.share-page {
    margin-bottom: 20px;
}
pre {    
    font-size: $font-size;  
    white-space: pre-wrap;   
}
.note {
    font-size: 1em;
    background-color: lightgray;
    padding: 10px;
    margin-left: 25px;
    margin-right: 25px;
    border: 1px solid black;
}
#submit {
    margin-bottom: 20px;
}
input, button {
    border: 1px solid black;
    background: darkgray;
    box-shadow: 10px 5px 5px blue;
    font-size: 1em;
    border-radius: 20px;
    padding: 10px;
    color: black;
    font-weight: bold;
}
input:focus, input:active, input:hover, button:focus, button:active, button:hover {
    background: white
}
textarea {
    font-size: $font-size;
    color: $text-color;
}
#input {
    width: 90%;
    resize: none;
    margin-bottom: 10px;
    overflow-y: scroll;
    padding: 10px;
}
.warning {
    color: red;
    font-size: $font-size;
}
.hidden {
    display: none;
}

